--- a/index.html
+++ b/index.html
@@ -716,44 +716,41 @@ td{ padding:20px 28px; color:var(--text-primary); }
     return new Intl.NumberFormat('en-US', { style:'currency', currency:'USD', maximumFractionDigits:0 }).format(n);
   }
 
-  // --- UI helpers ---
-  function setText(id, text, cls){
-    const el = document.getElementById(id);
-    if (!el) return;
-    el.textContent = text;
-    el.classList.toggle('positive', cls === 'pos');
-    el.classList.toggle('negative', cls === 'neg');
-  }
-   // --- UI helpers (PASTE THIS BLOCK) ---
-  function setTxt(id, val){ const el = document.getElementById(id); if (el) el.textContent = val; }
-  function setHtml(id, val){ const el = document.getElementById(id); if (el) el.innerHTML   = val; }
+ // --- UI helpers ---
+function setText(id, text, cls){
+  const el = document.getElementById(id);
+  if (!el) return;
+  el.textContent = text;
+  el.classList.toggle('positive', cls === 'pos');
+  el.classList.toggle('negative', cls === 'neg');
+}
+function setTxt(id, val){ const el = document.getElementById(id); if (el) el.textContent = val; }
+function setHtml(id, val){ const el = document.getElementById(id); if (el) el.innerHTML   = val; }
 
-  function updateGlobals(country, netAmt, netPct){
-    const countryName = country === 'mexico' ? 'Mexico' : 'Brazil';
+function updateGlobals(country, netAmt, netPct){
+  const countryName = country === 'mexico' ? 'Mexico' : 'Brazil';
 
-    setTxt('hero-country', countryName);
-    setTxt('hero-country-title', countryName);
-    setTxt('bottom-country', countryName);
-    setTxt('callout-country', countryName); // ok if missing
+  // country labels
+  setTxt('hero-country', countryName);
+  setTxt('hero-country-title', countryName);
+  setTxt('bottom-country', countryName);
 
-    const short = fmtShort(netAmt).replace('-','');
+  // amounts
+  const short = fmtShort(netAmt).replace('-','');       // e.g. $1.4M
+  const shortNo$ = short.replace('$','');               // e.g. 1.4M (for spans that already show a $)
 
-    document.querySelectorAll('.problem-dynamic,.bottom-dynamic,.nav-dynamic')
-      .forEach(el => el.textContent = short.replace('$',''));
+  // spots that only want the compact number
+  document.querySelectorAll('.problem-dynamic,.bottom-dynamic,.nav-dynamic')
+    .forEach(el => el.textContent = shortNo$);
 
-    setTxt('total-value', `+${currency0(Math.max(0, netAmt))} to your bank account`);
-    setTxt('hero-pct', Math.round(netPct * 100) + '%');
-    setHtml('nav-cta', `Unlock ${short} with Outpost`);
-  }
-  
-    const short = fmtShort(netAmt).replace('-','');
-    document.querySelectorAll('.problem-dynamic,.bottom-dynamic,.nav-dynamic')
-      .forEach(el => el.textContent = short.replace('$',''));
-    document.getElementById('hero-value').textContent = short.replace('$','');
-    document.getElementById('total-value').textContent = `+${currency0(Math.max(0, netAmt))} to your bank account`;
-    document.getElementById('hero-pct').textContent = Math.round(netPct * 100) + '%';
-    document.getElementById('nav-cta').innerHTML = `Unlock ${short} with Outpost`;
-  }
+  // hero line and value hero
+  setTxt('hero-value', shortNo$);
+  setTxt('total-value', `+${currency0(Math.max(0, netAmt))} to your bank account`);
+
+  // pct and navbar CTA
+  setTxt('hero-pct', Math.round(netPct * 100) + '%');
+  setHtml('nav-cta', `Unlock ${short} with Outpost`);
+}
 
   // --- Core compute ---
   function compute(country){
