--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ td{ padding:20px 28px; color:var(--text-primary); }
       <h2 class="section-title">The hidden cost of global expansion</h2>
       <p class="section-subtitle">
         Global app platforms expanding are leaving substantial value on the table every year from inefficient payments and tax infrastructure or relying on App / Play stores.
-        We estimate it's costing AppNation $<span class="problem-dynamic">2.9M</span> per annum in App / Play store fees and additional costs.
+        We estimate it's costing AppNation $<span class="problem-dynamic">2.9M</span> per annum in App / Play store fees and additional costs - and that's only for ArchAI.
       </p>
     </div>
     <div class="grid-3">
@@ -672,7 +672,7 @@ td{ padding:20px 28px; color:var(--text-primary); }
 <!-- FINAL CTA -->
 <section class="section" style="text-align:center;">
   <div class="container">
-    <h2 class="section-title">Unlocking $<span class="bottom-dynamic">2.9M</span> in <span id="bottom-country">Mexico</span>?<br/>That's a lot of Robux!</h2>
+    <h2 class="section-title">Unlocking $<span class="bottom-dynamic">2.9M</span> in <span id="bottom-country">Mexico</span>?<br/>That's what we call challenging the unthinkable!</h2>
     <button class="btn btn-cta-large" style="margin-top:32px;" onclick="openModal()">Book demo →</button>
   </div>
 </section>
@@ -682,7 +682,9 @@ td{ padding:20px 28px; color:var(--text-primary); }
   <div class="container">
     <div class="disclaimer-content">
       <p class="disclaimer-text">
-        The cost savings estimates on this website are for informational purposes only and based on general assumptions and publicly available data...
+        The cost savings estimates on this website are for informational purposes only and based on general assumptions and publicly available data. Actual results may vary significantly based on your specific business circumstances, transaction volumes, and market conditions. 
+        These estimates do not constitute guarantees, formal quotes, or professional advice. You should consult qualified advisors before making business decisions. 
+        Outpost disclaims all liability for any loss arising from reliance on these projections. Viewing this website does not create any client relationship. Governed by English law. 2025
       </p>
     </div>
   </div>
