--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   <section class="hero">
     <div class="container">
       <h1>
-        Get <span class="solid-green-text" id="hero-pct">21%</span> more out of your global GMV with Outpost
+        Get <span class="solid-green-text" id="hero-pct">21%</span> more from ArchAI globally with Outpost
       </h1>
       <p class="hero-subtitle">
         <span class="company">AppNation</span> is leaving $<span id="hero-value">2.9M</span> on the table every year.
@@ -195,8 +195,8 @@
       <div class="hero-callout">
         <p class="hero-callout-text">
           <strong>Outpost</strong> partners with app platforms like <strong class="company">AppNation</strong>
-          so they can sell <strong>globally</strong> like a local. Offload your tax, compliance, payments,
-          legal and operational burdens to Outpost.
+          so they can sell <strong>globally</strong> like a local. Offload your tax, compliance, payments and
+          legal obligations to Outpost.
         </p>
       </div>
     </div>
@@ -210,7 +210,7 @@
         <p class="section-subtitle">
           Global app platforms are leaving substantial value on the table each year from inefficient payments
           and tax infrastructure or relying on App / Play stores. We estimate it’s costing
-          <span class="company">AppNation</span> $<span class="problem-dynamic">2.9M</span> per annum in App / Play store fees and extra costs.
+          <span class="company">AppNation</span> $<span class="problem-dynamic">2.9M</span> p.a. in App / Play store fees and other payments costs.
         </p>
       </div>
       <div class="grid-3">
@@ -220,16 +220,9 @@
           </div>
           <div class="card-value">30% of GMV</div>
           <div class="card-label">App/Play Store fee</div>
-          <p class="card-description">App / Play Store commissions erode margins and impose restrictions.</p>
+          <p class="card-description">High App / Play Store commissions erode margins and impose restrictions.</p>
         </div>
-        <div class="card">
-          <div class="card-icon">
-            <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 3v18h18"/><path d="M18.5 3.5L7 15l4 4L22 7.5"/></svg>
-          </div>
-          <div class="card-value">$<span id="fx-card">$564K</span></div>
-          <div class="card-label">Extra payments &amp; FX costs</div>
-          <p class="card-description">Charges for refunds, chargebacks and FX spreads on payouts.</p>
-        </div>
+       
         <div class="card">
           <div class="card-icon">
             <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><polyline points="12,6 12,12 16,14"/></svg>
@@ -238,6 +231,16 @@
           <div class="card-label">Time to set up alternatives</div>
           <p class="card-description">DIY set up for payments, tax compliance, and legal requirements.</p>
         </div>
+
+         <div class="card">
+          <div class="card-icon">
+            <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 3v18h18"/><path d="M18.5 3.5L7 15l4 4L22 7.5"/></svg>
+          </div>
+          <div class="card-value">100% tailored</div>
+          <div class="card-label">Your Outpost entity, your risk profile</div>
+          <p class="card-description">We operate a dedicated entity model - which means no shared risk, and flexibility for us to support your business model.</p>
+        </div>
+        
       </div>
     </div>
   </section>
