--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <p class="section-subtitle">
           Global app platforms are leaving substantial value on the table each year from inefficient payments
           and tax infrastructure or relying on App / Play stores. We estimate it’s costing
-          <span class="company">AppNation</span> $<span class="problem-dynamic">2.9M</span> p.a. in App / Play store fees and other payments costs.
+          <span class="company">AppNation</span> $<span class="problem-dynamic">2.9M</span> p.a. in App / Play store fees and other costs.
         </p>
       </div>
       <div class="grid-3">
@@ -267,10 +267,10 @@
       <div class="calculator-container" id="calc-global">
         <div class="left-panel">
           <div class="calculator-inputs">
-            <h3 class="inputs-title"><span class="company">AppNation</span> — Global calculator</h3>
+            <h3 class="inputs-title"><span class="company">ArchAI</span> — Global calculator</h3>
 
             <div class="input-group">
-              <label class="input-label">Current GMV ($)</label>
+              <label class="input-label">Current ArchAI GMV ($)</label>
               <div class="input-wrapper">
                 <input type="range" id="gmv_num" class="range-input"/>
                 <span class="range-value" id="gmv_val">$27,300,000</span>
