--- a/index.html
+++ b/index.html
@@ -327,6 +327,37 @@
     </div>
   </section>
 
+    <!-- How we calculate (drop anywhere below the calculator) -->
+    <div class="calculator-explanation">
+      <h3 class="explanation-title">How we calculate your savings</h3>
+      <div class="explanation-grid">
+        <div class="explanation-item">
+          <h4>App / Play Store</h4>
+          <p>
+            The App / Play Store charge a 30% commission to act as a Merchant of Record (MoR).
+            They also charge fixed fees for refunds/chargebacks and take FX spread on payouts —
+            we assume this is ~4% of GMV in the calculator defaults.
+          </p>
+        </div>
+    
+        <div class="explanation-item">
+          <h4>Additional costs</h4>
+          <p>
+            The App / Play store charge additional fixed fees for processing refunds and chargebacks. These vary by market. 
+            Thet also charge FX and an FX spread for payouts. We estimated all these costs to come to c.4%. 
+          </p>
+        </div>
+    
+        <div class="explanation-item">
+          <h4>Outpost fee</h4>
+          <p>
+            Outpost is a flat percentage of GMV with no extra lines. We compare that directly against the
+            App / Play Store total (30% + pay/FX costs) to show your net value unlocked. Our exact fee % depends on the market complexity - contact us for more details. 
+          </p>
+        </div>
+      </div>
+    </div>
+  
   <!-- Comparison Table -->
   <section class="section">
     <div class="container">
