--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
   <section class="section" id="calculator">
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title">The impact Outpost can have</h2>
+        <h2 class="section-title">The impact Outpost can have for Arch AI alone globally</h2>
       </div>
 
       <div class="calculator-container" id="calc-global">
