--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         </a>
         <div class="nav-links">
           <a href="#problem">Problem</a>
-          <a href="#solution">Solution</a>
+          <a href="#outpost-one">Solution</a>
           <a href="#calculator">Calculator</a>
           <a href="#" class="btn btn-primary" id="nav-cta" onclick="openModal()">Unlock $<span class="nav-dynamic">2.9M</span> with Outpost</a>
         </div>
@@ -281,6 +281,111 @@
     </div>
   </section>
 
+  <!-- SOLUTION: OUTPOST ONE -->
+<section class="section" id="outpost-one">
+  <div class="container">
+    <div class="section-header">
+      <h2 class="section-title">
+        The solution: <span class="solid-green-text">Outpost One</span>
+      </h2>
+      <p class="section-subtitle">
+        An enterprise-grade, dedicated Merchant of Record that lets <span class="company">AppNation</span>
+        sell <strong>globally</strong> like a local — without the overhead.
+      </p>
+    </div>
+
+    <div class="grid-3">
+      <!-- Dedicated Entity -->
+      <div class="card">
+        <div class="card-icon">
+          <!-- shield / building -->
+          <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M12 3l7 4v5a9 9 0 0 1-7 8 9 9 0 0 1-7-8V7l7-4z"/>
+          </svg>
+        </div>
+        <div class="card-value">Dedicated entity</div>
+        <div class="card-label">Isolated risk & control</div>
+        <p class="card-description">Your own Outpost legal entity — no shared risk, clean separation, and enterprise governance.</p>
+      </div>
+
+      <!-- Payments & Routing -->
+      <div class="card">
+        <div class="card-icon">
+          <!-- globe / route -->
+          <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <circle cx="12" cy="12" r="10"/>
+            <path d="M2 12h20M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/>
+          </svg>
+        </div>
+        <div class="card-value">Local payments</div>
+        <div class="card-label">Optimized routing</div>
+        <p class="card-description">Higher auth rates and lower costs with local methods and PSP routing tailored to your MCC.</p>
+      </div>
+
+      <!-- Tax & Compliance -->
+      <div class="card">
+        <div class="card-icon">
+          <!-- check shield -->
+          <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M12 3l7 4v5a9 9 0 0 1-7 8 9 9 0 0 1-7-8V7l7-4z"/>
+            <path d="M9 12l2 2 4-4"/>
+          </svg>
+        </div>
+        <div class="card-value">Tax & compliance</div>
+        <div class="card-label">Done-for-you</div>
+        <p class="card-description">MoR responsibilities, indirect taxes, e-invoicing, KYC/KYB and reporting — handled.</p>
+      </div>
+
+      <!-- Payouts & FX -->
+      <div class="card">
+        <div class="card-icon">
+          <!-- bank / cash -->
+          <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M2 9l10-5 10 5v6a8 8 0 0 1-10 7A8 8 0 0 1 2 15V9z"/>
+            <path d="M12 12v6M8 14h8"/>
+          </svg>
+        </div>
+        <div class="card-value">Payouts & FX</div>
+        <div class="card-label">Cleaner economics</div>
+        <p class="card-description">Transparent settlement and reduced FX drag compared to store rails and generic MoRs.</p>
+      </div>
+
+      <!-- Legal & Ops -->
+      <div class="card">
+        <div class="card-icon">
+          <!-- briefcase -->
+          <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <rect x="3" y="7" width="18" height="13" rx="2"/>
+            <path d="M8 7V5a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/>
+          </svg>
+        </div>
+        <div class="card-value">Legal & ops</div>
+        <div class="card-label">Off your plate</div>
+        <p class="card-description">Contracts, refunds, chargebacks, and operational workflows aligned to your business model.</p>
+      </div>
+
+      <!-- Audit & Analytics -->
+      <div class="card">
+        <div class="card-icon">
+          <!-- chart -->
+          <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M3 3v18h18"/>
+            <path d="M7 15l4-4 3 3 4-5"/>
+          </svg>
+        </div>
+        <div class="card-value">Audit & analytics</div>
+        <div class="card-label">Crystal-clear records</div>
+        <p class="card-description">Clean reconciliation and exportable audit trails for finance, tax, and enterprise review.</p>
+      </div>
+    </div>
+
+    <div style="text-align:center;margin-top:28px;">
+      <button class="btn btn-cta-large" onclick="openModal()">See Outpost One in action →</button>
+    </div>
+  </div>
+</section>
+
+  
   <!-- SOLUTION -->
   <section class="section" id="solution">
     <div class="container">
