--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         </div>
         <div class="card-value">Dedicated entity</div>
         <div class="card-label">Isolated risk & control</div>
-        <p class="card-description">Your own Outpost legal entity — no shared risk, clean separation, and enterprise governance.</p>
+        <p class="card-description">Your own Outpost legal entity — no shared risk, clean separation, and enterprise level governance (more on this below).</p>
       </div>
 
       <!-- Payments & Routing -->
@@ -317,9 +317,9 @@
             <path d="M2 12h20M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/>
           </svg>
         </div>
-        <div class="card-value">Local payments</div>
-        <div class="card-label">Optimized routing</div>
-        <p class="card-description">Higher auth rates and lower costs with local methods and PSP routing tailored to your MCC.</p>
+        <div class="card-value">Localised payments</div>
+        <div class="card-label">We won't cost you approval rates</div>
+        <p class="card-description">High approval rates with tailored MCC, optimised PSP costs and access to local APM.</p>
       </div>
 
       <!-- Tax & Compliance -->
@@ -333,7 +333,7 @@
         </div>
         <div class="card-value">Tax & compliance</div>
         <div class="card-label">Done-for-you</div>
-        <p class="card-description">MoR responsibilities, indirect taxes, e-invoicing, KYC/KYB and reporting — handled.</p>
+        <p class="card-description">MoR responsibilities, indirect taxes, e-invoicing, filing, legal structuring — handled.</p>
       </div>
 
       <!-- Payouts & FX -->
@@ -346,7 +346,7 @@
           </svg>
         </div>
         <div class="card-value">Payouts & FX</div>
-        <div class="card-label">Cleaner economics</div>
+        <div class="card-label">Clean economics</div>
         <p class="card-description">Transparent settlement and reduced FX drag compared to store rails and generic MoRs.</p>
       </div>
 
@@ -359,9 +359,9 @@
             <path d="M8 7V5a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/>
           </svg>
         </div>
-        <div class="card-value">Legal & ops</div>
-        <div class="card-label">Off your plate</div>
-        <p class="card-description">Contracts, refunds, chargebacks, and operational workflows aligned to your business model.</p>
+        <div class="card-value">Legal, ops and finance</div>
+        <div class="card-label">Off your plate with clear records</div>
+        <p class="card-description">Refunds, chargebacks, and operational workflows aligned to your business model. Transparent and optimised fees, clean reconciliation reports.</p>
       </div>
 
       <!-- Audit & Analytics -->
@@ -373,13 +373,13 @@
             <path d="M7 15l4-4 3 3 4-5"/>
           </svg>
         </div>
-        <div class="card-value">Audit & analytics</div>
-        <div class="card-label">Crystal-clear records</div>
-        <p class="card-description">Clean reconciliation and exportable audit trails for finance, tax, and enterprise review.</p>
+        <div class="card-value">One API </div>
+        <div class="card-label">Quick and clean set up</div>
+        <p class="card-description">Fast and clean set up - integrate with our developer friendly APIs to go live.</p>
       </div>
     </div>
 
-    <div style="text-align:center;margin-top:28px;">
+    <div style="text-align:center;margin-top:35px;">
       <button class="btn btn-cta-large" onclick="openModal()">See Outpost One in action →</button>
     </div>
   </div>
