--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         </div>
         <div class="card-value">Legal, ops and finance</div>
         <div class="card-label">Off your plate with clear records</div>
-        <p class="card-description">Refunds, chargebacks, and operational workflows aligned to your business model. Transparent and optimised fees, clean reconciliation reports.</p>
+        <p class="card-description">Operational workflows aligned to your business model. Transparent and optimised fees, clean reconciliation reports.</p>
       </div>
 
       <!-- Audit & Analytics -->
@@ -379,7 +379,7 @@
       </div>
     </div>
 
-    <div style="text-align:center;margin-top:35px;">
+    <div style="text-align:center;margin-top:100px;">
       <button class="btn btn-cta-large" onclick="openModal()">See Outpost One in action →</button>
     </div>
   </div>
