--- a/index.html
+++ b/index.html
@@ -483,14 +483,14 @@
         <div class="explanation-item">
           <h4>Additional costs</h4>
           <p>
-            Stores charge fixed fees for refunds/chargebacks and take FX spread on payouts. We model these at ~4% of GMV by default.
+            Stores charge high fixed fees for refunds/chargebacks and take FX spread on payouts. We model these at ~4% of GMV by default.
           </p>
         </div>
     
         <div class="explanation-item">
           <h4>Outpost fee</h4>
           <p>
-            Outpost is a flat percentage of GMV with no extra lines. We compare that directly to the store total (30% + additional costs) to show net value unlocked.
+            Outpost is a flat percentage of GMV. We do not cover refunds / chargeback fees - but negotiate the lowest on the market for you. We compare that directly to the store total (30% + additional costs) to show net value unlocked. 
           </p>
         </div>
       </div>
