--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         <div class="explanation-item">
           <h4>Outpost fee</h4>
           <p>
-            Outpost is a flat percentage of GMV. We do not cover refunds / chargeback fees - but negotiate the lowest on the market for you. We compare that directly to the store total (30% + additional costs) to show net value unlocked. 
+            Outpost is a flat percentage of GMV. We do not cover refunds / chargeback fees - but negotiate the lowest on the market for you. We compare that to the store total to show net value unlocked. 
           </p>
         </div>
       </div>
