--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
           <div class="card-icon">
             <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 3v18h18"/><path d="M18.5 3.5L7 15l4 4L22 7.5"/></svg>
           </div>
-          <div class="card-value">100% tailored</div>
-          <div class="card-label">Your Outpost entity, your risk profile</div>
-          <p class="card-description">We operate a dedicated entity model - which means no shared risk, and flexibility for us to support your business model.</p>
+          <div class="card-value">Shared entity = shared risk</div>
+          <div class="card-label">Limited support for new business models</div>
+          <p class="card-description">Because of shared entity model, other MoRs have a lot of limitations on who they can work with.</p>
         </div>
         
       </div>
@@ -303,9 +303,9 @@
             <path d="M12 3l7 4v5a9 9 0 0 1-7 8 9 9 0 0 1-7-8V7l7-4z"/>
           </svg>
         </div>
-        <div class="card-value">Dedicated entity</div>
+        <div class="card-value">Your Outpost entity, your risk profile</div>
         <div class="card-label">Isolated risk & control</div>
-        <p class="card-description">Your own Outpost legal entity — no shared risk, clean separation, and enterprise level governance (more on this below).</p>
+        <p class="card-description">Your own Outpost legal entity — no shared risk and enterprise level governance, and flexibility for us to support your business model.</p>
       </div>
 
       <!-- Payments & Routing -->
