--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
           <div class="card-icon">
             <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 3v18h18"/><path d="M18.5 3.5L7 15l4 4L22 7.5"/></svg>
           </div>
-          <div class="card-value">Shared entity and risk</div>
-          <div class="card-label">Limited support for new business models</div>
-          <p class="card-description">Shared entity models mean other MoRs have a lot of limitations on who they can work with.</p>
+          <div class="card-value">Shared entities</div>
+          <div class="card-label">Limited support due to shared risk</div>
+          <p class="card-description">Shared entity models mean other MoRs have limitations on who they can work with.</p>
         </div>
         
       </div>
