--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
             <path d="M12 3l7 4v5a9 9 0 0 1-7 8 9 9 0 0 1-7-8V7l7-4z"/>
           </svg>
         </div>
-        <div class="card-value">Your Outpost entity, your risk profile</div>
+        <div class="card-value">Dedicated entity</div>
         <div class="card-label">Isolated risk & control</div>
-        <p class="card-description">Your own Outpost legal entity — no shared risk and enterprise level governance, and flexibility for us to support your business model.</p>
+        <p class="card-description">Your Outpost legal entity — your risk. End enterprise level governance and flexibility for us to support your business model.</p>
       </div>
 
       <!-- Payments & Routing -->
@@ -359,7 +359,7 @@
             <path d="M8 7V5a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/>
           </svg>
         </div>
-        <div class="card-value">Legal, ops and finance</div>
+        <div class="card-value">Ops and finance</div>
         <div class="card-label">Off your plate with clear records</div>
         <p class="card-description">Operational workflows aligned to your business model. Transparent and optimised fees, clean reconciliation reports.</p>
       </div>
